--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -63,7 +63,7 @@
         android:id="@+id/btnManageTheaters"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Quản lý rạp"
+        android:text="Quản lý sự kiện"
         android:textSize="16sp"
         android:background="@drawable/button_background"
         android:textColor="@color/white"
