--- a/app/src/main/res/layout/activity_promotion_list.xml
+++ b/app/src/main/res/layout/activity_promotion_list.xml
@@ -6,20 +6,10 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPromotions"
+        android:id="@+id/recyclerViewPromotions"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btnAddPromotion"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Button
-        android:id="@+id/btnAddPromotion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Thêm khuyến mãi"
-        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
