--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -77,8 +77,12 @@
                 android:layout_marginTop="8dp"
                 android:gravity="end|center_vertical">
 
-
-
+                <CheckBox
+                    android:id="@+id/checkboxSelect"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Chọn"
+                    android:visibility="visible" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
