--- a/app/src/main/res/layout/item_revenue.xml
+++ b/app/src/main/res/layout/item_revenue.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Giá: "
-        android:textColor="#4CAF50"
+        android:textColor="#9C27B0"
         android:textStyle="bold"/>
 
     <TextView
